--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,53 @@
-# Sprints (private - không push lên git)
-/planning/sprints/
+# See https://help.github.com/articles/ignoring-files for more about ignoring files.
+
+# Ignore bundler config.
+/.bundle
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
+
+# Ignore storage (default).
+/storage/*
+!/storage/.keep
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+# Ignore uploaded files in development.
+/public/uploads
+
+# Ignore node_modules
+/node_modules
+
+# Ignore environment variables
+.env
+.env.*
+!.env.example
+
+# Ignore IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Ignore OS files
+.DS_Store
+Thumbs.db
+
+# Ignore coverage reports
+/coverage/
+
+# Ignore vendor bundle
+/vendor/bundle
+
+# Ignore docs/planning/sprints (private)
+/docs/planning/sprints/
