--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,20 @@ test:
   database: ankhang_crm_test
 
 production:
-  <<: *default
-  database: ankhang_crm_production
-  username: <%= ENV["APP_DATABASE_USER"] %>
-  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  primary:
+    <<: *default
+    database: ankhang_crm_production
+    username: <%= ENV["APP_DATABASE_USER"] %>
+    password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  cache:
+    <<: *default
+    database: ankhang_crm_production
+    username: <%= ENV["APP_DATABASE_USER"] %>
+    password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *default
+    database: ankhang_crm_production
+    username: <%= ENV["APP_DATABASE_USER"] %>
+    password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+    migrations_paths: db/queue_migrate
