chore(docs): translate task names to Vietnamese in all sprint files

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ Thumbs.db
 /vendor/bundle
 
 # Ignore docs/planning/sprints (private)
-/docs/planning/sprints/
+# /docs/planning/sprints/
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
