feat(web-push): add notification click redirect with highlight + fix worker network
- Add action_url method to Notification model with highlight param
- Update WebPushService URL to include highlight for contact
- Create highlight_controller.js for scroll and flash animation
- Add contact IDs to table rows for highlighting
- Fix worker network to allow external API calls (FCM)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,7 @@ services:
         condition: service_healthy
     networks:
       - backend
+      - frontend  # TASK-056: Required for Web Push to external services (FCM)
     volumes:
       - .:/app
       - bundle_cache:/usr/local/bundle
