--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - 'db/schema.rb'
+    - 'db/cache_schema.rb'
+    - 'db/cable_schema.rb'
+    - 'db/queue_schema.rb'
     - 'db/migrate/**/*'
     - 'vendor/**/*'
     - 'node_modules/**/*'
