feat(logging): implement 2-tier logging system with admin UI
- Phase 1: Tier 1 Business Activity Logs
  - Loggable concern with auto-logging on create/update/destroy
  - Current model for request context (user, IP, user_agent)
  - Enhanced activity_logs table with request_id, user_agent

- Phase 2: Tier 2 User Event Logs
  - RequestTracker middleware for all HTTP requests
  - UserEvent model with event_type, path, method, status, duration
  - Scopes: recent, by_event_type, successful, errors, in_date_range

- Phase 3: Archive System
  - Archive tables: activity_log_archives, user_event_archives
  - ArchiveActivityLogsJob (6 months retention)
  - ArchiveUserEventsJob (90 days retention)
  - S3ExportLogsJob (mocked for future S3 integration)
  - Solid Queue recurring schedule configuration

- Phase 4: Admin UI
  - Admin::LogsController with filters, pagination, CSV export
  - Views: index (activity logs), events (user events), archives
  - CanCanCan authorization (logs.manage permission)
  - Sidebar navigation link

- RSpec Tests: 52 examples, 0 failures
- UI/UX Pro Max compliance: cursor-pointer, transitions
- Added csv gem for Ruby 3.4+ compatibility

--- a/config/queue.yml
+++ b/config/queue.yml
@@ -8,6 +8,23 @@ default: &default
       processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
       polling_interval: 0.1
 
+  # TASK-LOGGING: Recurring jobs for log archiving
+  recurring:
+    archive_activity_logs:
+      class: ArchiveActivityLogsJob
+      schedule: "0 3 1 * *"  # 3:00 AM, 1st of each month
+      description: "Archive Tier 1 logs older than 6 months"
+
+    archive_user_events:
+      class: ArchiveUserEventsJob
+      schedule: "0 4 1 * *"  # 4:00 AM, 1st of each month
+      description: "Archive Tier 2 events older than 90 days"
+
+    s3_export_logs:
+      class: S3ExportLogsJob
+      schedule: "0 5 1 * *"  # 5:00 AM, 1st of each month (quarterly in future)
+      description: "Export archive data older than 1 year to S3"
+
 development:
   <<: *default
 
