docs: add VAPID keys to .env.example for Web Push setup
- Add VAPID_PUBLIC_KEY, VAPID_PRIVATE_KEY, VAPID_SUBJECT placeholders
- Include command to generate new VAPID keys
- Required for Web Push notifications (TASK-056)

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ SECRET_KEY_BASE=your_secret_key_here
 
 # Sidekiq (optional)
 # SIDEKIQ_CONCURRENCY=5
+
+# Web Push VAPID Keys (required for push notifications)
+# Generate with: bundle exec ruby -e "require 'web-push'; key = WebPush.generate_key; puts 'VAPID_PUBLIC_KEY=' + key.public_key; puts 'VAPID_PRIVATE_KEY=' + key.private_key"
+VAPID_PUBLIC_KEY=your_vapid_public_key_here
+VAPID_PRIVATE_KEY=your_vapid_private_key_here
+VAPID_SUBJECT=mailto:admin@ankhang.com
